--- a/views/siloes/resumen_index_vaso.ejs
+++ b/views/siloes/resumen_index_vaso.ejs
@@ -5,6 +5,7 @@
     <div class="panel" style="border:none;">
 
         <h4>Siloe</h4>
+        <h6>Se visualizará un informe con los resultados del vaso y año seleccionado.</h6>
         <br>
 
         <form class="form-horizontal" action="/siloes/ver_resumen_vaso?_method=put" method="post">
@@ -42,7 +43,7 @@
 
             <div class="form-group text-center">
 
-                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Ver Resumen</button>
+                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Ver Informe</button>
 
             </div>
 
