--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -18,7 +18,7 @@
     .ocultar_pc {
 
         visibility: visible;
-        
+
     }
 
 
@@ -66,7 +66,15 @@
 
 
 
+    /* menu inicio =============================================================== */
+    /* menu inicio =============================================================== */
+    /* menu inicio =============================================================== */
 
+    #menu-inicio {
+
+		font-size: 4vw;
+
+	}
 
 
 
