--- a/views/index.ejs
+++ b/views/index.ejs
@@ -202,7 +202,7 @@
 								<td><h5><i class="fa fa-phone"></i> 0034658214679</h5></td>
 							</tr>
 							<tr>
-								<td><h5><i class="fa fa-envelope"></i> jotamontoyo@hotmail.es</h5></td>
+								<td><h5><i class="fa fa-envelope"></i> contacto@registrosdemantenimiento.com</h5></td>
 							</tr>
 						</tbody>
 
