--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -474,7 +474,7 @@
 	#inicio {
 
 /*		background: url(/images/inicio/07.jpg) no-repeat fixed center; */
-/*		background-color: rgba(30, 144, 255, 0.8); */
+		background-color: rgba(30, 144, 255, 0.8);
 
 
 
@@ -771,7 +771,7 @@
 		padding: 0px;
 /*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
 		position: relative;
-/*		background-color: rgba(30, 144, 255, 0.8); */
+		background-color: rgba(30, 144, 255, 0.8);
 
 		overflow: 	hidden;
 
@@ -782,13 +782,13 @@
 		-webkit-justify-content: 	space-around;
 		justify-content: 			space-around;
 
-		background: rgba(73,155,234,1);
+/*		background: rgba(73,155,234,1);
 		background: -moz-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
 		background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(73,155,234,1)), color-stop(12%, rgba(73,155,234,1)), color-stop(77%, rgba(17,82,194,1)), color-stop(100%, rgba(17,82,194,1)));
 		background: -webkit-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
 		background: -o-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
 		background: -ms-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
-		background: radial-gradient(ellipse at center, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		background: radial-gradient(ellipse at center, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%); */
 
 
 
@@ -802,6 +802,12 @@
 		margin: 15vh 40px 20vh 40px;
 
 
+
+	}
+
+	#seccion_02_items img {
+
+		max-width: 10px;
 
 	}
 
