--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 
 	<div class="container-fluid bordes text-center animated fadeIn" id="inicio">
 
-		<img src="/images/inicio/09.jpg" >
+<!--		<img src="/images/inicio/09.jpg" > -->
 
 		<div id="login_inicio">
 
@@ -67,7 +67,7 @@
 				<h3>Lecturas y consumos de suministros externos o depósitos</h3>
 				<h3>Ensayos de aguas de piscinas y vasos</h3>
 				<br>
-				<button class="btn btn-info"
+				<button class="btn btn-primary"
 					data-toggle="modal"
 					data-target="#ver-mas-modal">
 						<i class="fa fa-plus"></i> Info
@@ -91,7 +91,7 @@
 
 				<h3>Sencilla</h3>
 
-				<p>Desarrollada para trabajo de campo.</p>
+				<p>Desarrollada para trabajo de campo. Una vez registradas las lecturas insitu no habrá más tareas administrativas adicionales.</p>
 
 			</div>
 
@@ -101,7 +101,7 @@
 
 				<h3>Rápida</h3>
 
-				<p>Empiece hoy a gestionar sus consumos.</p>
+				<p>Empiece hoy a gestionar sus consumos y análisis. Visualice los resultados o descarguelos en su equipo.</p>
 
 			</div>
 
@@ -111,7 +111,7 @@
 
 				<h3>Rentable</h3>
 
-				<p>Ahorre hasta el 80% del tiempo.</p>
+				<p>Ahorre hasta el 80% del tiempo de sistemas tradicionales. Podrá reinvertir el tiempo ahorrado en tareas más productivas.</p>
 
 			</div>
 
@@ -132,7 +132,7 @@
 
 			<div class="col-md-3 seccion_item">
 
-				<h3>Paso 1</h3>
+				<h3><img src="/images/1.png" alt=""></h3>
 
 				<p><strong>Solicite una clave de prueba gratuita.</strong> Cumplimente el formulario de abajo sin nigún compromiso.</p>
 
@@ -140,7 +140,7 @@
 
 			<div class="col-md-3 seccion_item">
 
-				<h3>Paso 2</h3>
+				<h3><img src="/images/2.png" alt=""></h3>
 
 				<p><strong>Configure su instalación.</strong> Defina los contadores y piscinas.</p>
 
@@ -148,9 +148,9 @@
 
 		  	<div class="col-md-3 seccion_item">
 
-				<h3>Paso 3</h3>
+				<h3><img src="/images/3.png" alt=""></h3>
 
-				<p><strong>Dé de alta usuarios.</strong> Cada uno tendrá su própio ámbito de trabajo.</p>
+				<p><strong>Dé de alta usuarios.</strong> Cada uno tendrá su propio ámbito de trabajo.</p>
 
 
 
@@ -158,7 +158,7 @@
 
 		  	<div class="col-md-3 seccion_item">
 
-				<h3>Paso 4</h3>
+				<h3><img src="/images/4.png" alt=""></h3>
 
 				<p><strong>Cree los partes de lecturas y de ensayos.</strong> Revise los consumos y sus posibles desvíos.</p>
 
@@ -392,7 +392,7 @@
 							Su ámbito de aplicación es en todas aquellas instalaciones que consten de sistemas de distribución de agua, combustible o electricidad, y piscinas o depóstitos de aguas sujetos a análisis por normativa.
 						</p>
 						<p>Permite obtener en tiempo inmediato los informes sobre consumos, generando avisos sobre posibles desvíos.</p>
-						<p>Reduce alrededor de un 80% el tiempo empleado en sistemas tradicionales.<p>
+						<p>Genera los informes Siloé de cada vaso o pisicina sujetos a análisis por normativa, y ofrece la posibilidad de descargalos en el formato exigido por el Real Decreto 742/2013, de 27 de septiembre.</p>
 						<p>Desarrollado por:</p>
 						<p class="text-center">&copy; 2017 cosilsCompany, Inc. &middot;
 							<a
@@ -520,13 +520,13 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title text-center" id="myLOPD">&copy; 2017 cosilsCompany, Inc.</h4>
+						<h4 class="modal-title text-center" id="myLOPD">&copy; cosilsCompany, Inc.</h4>
 					</div>
 					<div class="modal-body">
 
 						<h3 class="text-center">Política de Privacidad</h3>
 						<br>
-						<p>A efectos de lo dispuesto en la normativa vigente en materia de protección de datos de carácter personal, mediante esta Política de Privacidad, cosilsCompany, Inc. (en adelante, “cosilsCompany” informa a los usuarios (en adelante, el “Usuario” o “Usuarios”) de su sitio Web https://supcounter.herokuapp.com (en adelante, el “Sitio Web”) acerca de su política de protección de los datos de carácter personal recogidos de los Usuarios del Sitio Web, para que éstos determinen libre y voluntariamente si desean facilitar a cosilsCompany los datos personales que se les puedan requerir o que se puedan obtener sobre los mismos con ocasión de su acceso y uso del Sitio Web.</p>
+						<p>A efectos de lo dispuesto en la normativa vigente en materia de protección de datos de carácter personal, mediante esta Política de Privacidad, <strong>&copy; cosilsCompany, Inc.</strong> (en adelante, “cosilsCompany” informa a los usuarios (en adelante, el “Usuario” o “Usuarios”) de su sitio Web <strong>https:registrosdemantenimiento.com</strong> (en adelante, el “Sitio Web”) acerca de su política de protección de los datos de carácter personal recogidos de los Usuarios del Sitio Web, para que éstos determinen libre y voluntariamente si desean facilitar a cosilsCompany los datos personales que se les puedan requerir o que se puedan obtener sobre los mismos con ocasión de su acceso y uso del Sitio Web.</p>
 
 						<p>Los únicos datos personales a los que cosilsCompany tendrá acceso a través del Sitio Web serán aquellos que el Usuario facilite voluntariamente, así como aquellos otros recogidos a través de las cookies instaladas y cuyas condiciones de uso puede consultar nuestra política de cookies.</p>
 
@@ -534,17 +534,17 @@
 
 						<p>Tratamiento de datos de carácter personal facilitados a través del Sitio Web.</p>
 
-						<p>De conformidad con la Ley Orgánica 15/1999, de 13 de diciembre, de Protección de Datos de Carácter Personal y el Real Decreto 1720/2007, de 21 de diciembre, por el que se aprueba el Reglamento de desarrollo de la Ley Orgánica 15/1999, cosilsCompany, con domicilio en Moralet, 137-A - San Vicente del Raspeig - Alicante, informa al Usuario que los datos que pueda facilitar a través del Sitio Web serán incorporados a un fichero automatizado de datos de carácter personal titularidad de cosilsCompany. Usted podrá consultar los tratamientos específicos que nuestra Compañía puede hacer con sus datos en cada uno de los apartados de nuestra web donde se recaben sus datos. Le recomendamos leer el contenido de las cláusulas de protección de datos que se incluyen en cada apartado a la hora de recabar sus datos. Con carácter general se tratarán sus datos con las siguientes finalidades:</p>
+						<p>De conformidad con la Ley Orgánica 15/1999, de 13 de diciembre, de Protección de Datos de Carácter Personal y el Real Decreto 1720/2007, de 21 de diciembre, por el que se aprueba el Reglamento de desarrollo de la Ley Orgánica 15/1999, cosilsCompany, con domicilio en Moralet, 137-A - 03699 Alicante, informa al Usuario que los datos que pueda facilitar a través del Sitio Web serán incorporados a un fichero automatizado de datos de carácter personal titularidad de cosilsCompany. Usted podrá consultar los tratamientos específicos que nuestra Compañía puede hacer con sus datos en cada uno de los apartados de nuestra web donde se recaben sus datos. Le recomendamos leer el contenido de las cláusulas de protección de datos que se incluyen en cada apartado a la hora de recabar sus datos. Con carácter general se tratarán sus datos con las siguientes finalidades:</p>
 						<ul>
 							<li>Contacto: Los datos recabados serán incorporados a un fichero (que podrá ser automatizado) responsabilidad de cosilsCompany, a los efectos de poder gestionar o en su caso, tener en cuenta y/o contestar a su consulta, comentario o sugerencia.</li>
 
 							<li>En todos los formularios de recogida de datos presentes en el Sitio Web, cosilsCompany facilita una casilla mediante la cual el Usuario podrá oponerse/negarse a la cesión indicada.</li>
 
-							<li>El consentimiento otorgado por el Usuario podrá ser revocado mediante notificación dirigida a la siguiente dirección de correo electrónico: jotamontoyo@hotmail.es o bien por correo ordinario dirigido a cosilsCompany, Moralet, 137-A - San Vicente del Raspeig - Alicante.</li>
+							<li>El consentimiento otorgado por el Usuario podrá ser revocado mediante notificación dirigida a la siguiente dirección de correo electrónico: contacto@registrosdemantenimiento.com o bien por correo ordinario dirigido a cosilsCompany, Moralet, 137-A - 03699 Alicante.</li>
 
 							<li>El Usuario se responsabiliza de la veracidad y exactitud de los datos personales comunicados, reservándose cosilsCompany el derecho a excluir de los servicios registrados a todo Usuario que haya facilitado datos falsos, sin perjuicio de las demás acciones que procedan en Derecho.</li>
 
-							<li>En cualquier caso, el Usuario podrá hacer efectivo el ejerciciode sus derechos de acceso, rectificación, cancelación y oposición, mediante e-mail dirigido jotamontoyo@hotmail.es como mediante petición escrita dirigida a la dirección postal antes señalada.</li>
+							<li>En cualquier caso, el Usuario podrá hacer efectivo el ejercicio de sus derechos de acceso, rectificación, cancelación y oposición, mediante e-mail dirigido a contacto@registrosdemantenimiento.com, así como mediante petición escrita dirigida a la dirección postal antes señalada.</li>
 
 							<li>Finalmente Ud. se compromete a comunicar a cosilsCompany cualquier modificación de los datos personales facilitados.</li>
 
