--- a/views/quizes/resumen.ejs
+++ b/views/quizes/resumen.ejs
@@ -66,7 +66,7 @@
 
     <br>
 
-    
+
 
 
     <div class="panel panel-default table-responsive">
@@ -95,7 +95,7 @@
                         <td class="text-center"><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].dia %>-<%= quizes[i].mes %>-<%= quizes[i].anio %></a></td>
                         <td class="text-center noprint"><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].id %></a></td>
                         <td class="text-center"><%= quizes[i].UserName %></td>
-                        <% if (quizes[i].proceso) {%>
+                        <% if (quizes[i].estado === "abierto") {%>
 							<td class="text-center"><span class="" aria-hidden="true"></span></td>
 						<%} else {%>
 							<td class="text-center"><img src="/images/check.png" /></td>
