--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,11 +83,9 @@
 					<li><a href="/"><img src="/images/home.png" alt="" /> Inicio <span class="sr-only">(current)</span></a></li>
 					<li><a href="/quizes"><img src="/images/partes3.png" alt="" /> Lecturas </a></li>
 					<li><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
-					<li><a href="/quizes/resumen_index"><img src="/images/consumos2.png" alt="" /> Consumos </a></li>
-
+					<li><a href="/quizes/resumen_index"><img src="/images/grifo.png" alt="" /> Consumos </a></li>
 					<li><a href="/siloes"><img src="/images/probetas.png" alt="" /> Ensayos </a></li>
 					<li><a href="/vasos"><img src="/images/vasos.png" alt="" /> Vasos </a></li>
-
 					<li class="dropdown show">
 						<a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    	<img src="/images/consumos2.png" alt="" /> Siloes
