--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -34,7 +34,7 @@
 					<th class="text-center">Parte</th>
 					<th class="text-center">User</th>
 					<th class="text-center">Centro</th>
-					<th class="text-center">Cerrado</th>
+					<th class="text-center">Revisado</th>
 <!--					<th>Proveedor</th>
 					<th>Motivo</th> -->
 				</tr>
