--- a/views/quizes/resumen.ejs
+++ b/views/quizes/resumen.ejs
@@ -4,7 +4,7 @@
 
     <div class="row" id="head_consumos">
 
-        <h4>&nbsp;&nbsp;<img src="/images/consumos2.png" alt="" /> Consumos</h4>
+        <h4>&nbsp;&nbsp;<img src="/images/grifo.png" alt="" /> Consumos</h4>
 
 
         <a class="noprint" role="button" data-toggle="collapse" data-parent="#accordion" href="#leyenda" aria-expanded="true" aria-controls="collapseOne">
@@ -15,9 +15,9 @@
             <img src="/images/printer.png"/>
         </a> -->
 
-        <a type="button" name="imprimir" value="imprimir" href="/quizes/imprimir_resumen">
+<!--        <a type="button" name="imprimir" value="imprimir" href="/quizes/imprimir_resumen">
             <img src="/images/printer.png"/>
-        </a>
+        </a> -->
 
 
         <div id="leyenda" class="panel-collapse collapse text-center" role="tabpanel">
@@ -98,7 +98,7 @@
                         <% if (quizes[i].estado === "abierto") {%>
 							<td class="text-center"><span class="" aria-hidden="true"></span></td>
 						<%} else {%>
-							<td class="text-center"><img src="/images/check.png" /></td>
+							<td class="text-center"><i class="fa fa-check"></i></td>
 						<%}%>
 
 
