--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -124,6 +124,7 @@
     			<select class="form-control" id="transparencia" name="vaso[transparencia]">
     				<option value='cumple' <%if (vaso.transparencia==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.transparencia==='no cumple') {%> selected <%}%>>No cumple</option>
+    				<option value='no ensaya' <%if (vaso.transparencia==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
