no contabiliza campos blq

--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -343,20 +343,10 @@
 												    			<select class="form-control" id="extranios_m" name="ensayo[extranios_m]">
 												    				<option value='cumple' <%if (ensayos[index].extranios_m==='cumple') {%> selected <%}%>>✔️ Cumple</option>
 												    				<option value='no cumple' <%if (ensayos[index].extranios_m==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+																	<option value='no ensaya' <%if (ensayos[index].extranios_m==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
 												    			</select>
 												    		</div>
 												    	</div>
-
-														<div class="form-group">
-												    		<label for="extranios" class="col-md-6 control-label">Extraños t</label>
-												    		<div class="col-sm-6">
-												    			<select class="form-control" id="extranios_t" name="ensayo[extranios_t]">
-												    				<option value='cumple' <%if (ensayos[index].extranios_t==='cumple') {%> selected <%}%>>✔️ Cumple</option>
-												    				<option value='no cumple' <%if (ensayos[index].extranios_t==='no cumple') {%> selected <%}%>>❌ No cumple</option>
-												    			</select>
-												    		</div>
-												    	</div>
-
 
 														<br>
 														<div class="row pie_grupo_items_ensayo">
@@ -366,8 +356,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if ((ensayos[index].extranios_m  !== ensayos[index].extranios)  ||
-																		(ensayos[index].extranios_t !== ensayos[index].extranios)) { %>
+																<% if (ensayos[index].extranios_m !== ensayos[index].extranios) { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
@@ -734,16 +723,7 @@
 													    			<select class="form-control" id="ecoli_m" name="ensayo[ecoli_m]">
 													    				<option value='cumple' <%if (ensayos[index].ecoli_m==='cumple') {%> selected <%}%>>✔️ Cumple</option>
 													    				<option value='no cumple' <%if (ensayos[index].ecoli_m==='no cumple') {%> selected <%}%>>❌ No cumple</option>
-													    			</select>
-													    		</div>
-													    	</div>
-
-															<div class="form-group">
-													    		<label for="ecoli" class="col-md-6 control-label">Écoli t</label>
-													    		<div class="col-sm-6">
-													    			<select class="form-control" id="ecoli_t" name="ensayo[ecoli_t]">
-													    				<option value='cumple' <%if (ensayos[index].ecoli_t==='cumple') {%> selected <%}%>>✔️ Cumple</option>
-													    				<option value='no cumple' <%if (ensayos[index].ecoli_t==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+																		<option value='no ensaya' <%if (ensayos[index].ecoli_m==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
 													    			</select>
 													    		</div>
 													    	</div>
@@ -756,8 +736,7 @@
 																</div>
 
 																<div class="col-md-6">
-																	<% if ((ensayos[index].ecoli_m  !== ensayos[index].ecoli)  ||
-																			(ensayos[index].ecoli_t !== ensayos[index].ecoli)) { %>
+																	<% if (ensayos[index].ecoli_m !== ensayos[index].ecoli) { %>
 																		<img class="center-block" src="/images/info4.png" alt="" />
 																	<%}%>
 																</div>
@@ -822,16 +801,7 @@
 													    			<select class="form-control" id="pseudomona_m" name="ensayo[pseudomona_m]">
 													    				<option value='cumple' <%if (ensayos[index].pseudomona_m==='cumple') {%> selected <%}%>>✔️ Cumple</option>
 													    				<option value='no cumple' <%if (ensayos[index].pseudomona_m==='no cumple') {%> selected <%}%>>❌ No cumple</option>
-													    			</select>
-													    		</div>
-													    	</div>
-
-															<div class="form-group">
-													    		<label for="pseudomona" class="col-md-6 control-label">Pseudomona t</label>
-													    		<div class="col-sm-6">
-													    			<select class="form-control" id="pseudomona_t" name="ensayo[pseudomona_t]">
-													    				<option value='cumple' <%if (ensayos[index].pseudomona_t==='cumple') {%> selected <%}%>>✔️ Cumple</option>
-													    				<option value='no cumple' <%if (ensayos[index].pseudomona_t==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+																		<option value='no ensaya' <%if (ensayos[index].pseudomona_m==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
 													    			</select>
 													    		</div>
 													    	</div>
@@ -844,8 +814,7 @@
 																</div>
 
 																<div class="col-md-6">
-																	<% if ((ensayos[index].pseudomona_m  !== ensayos[index].pseudomona)  ||
-																			(ensayos[index].pseudomona_t !== ensayos[index].pseudomona)) { %>
+																	<% if (ensayos[index].pseudomona_m !== ensayos[index].pseudomona) { %>
 																		<img class="center-block" src="/images/info4.png" alt="" />
 																	<%}%>
 																</div>
@@ -877,16 +846,7 @@
 																<select class="form-control" id="enterococos_m" name="ensayo[enterococos_m]">
 																	<option value='cumple' <%if (ensayos[index].enterococos_m==='cumple') {%> selected <%}%>>✔️ Cumple</option>
 																	<option value='no cumple' <%if (ensayos[index].enterococos_m==='no cumple') {%> selected <%}%>>❌ No cumple</option>
-																</select>
-															</div>
-														</div>
-
-														<div class="form-group">
-															<label for="enterococos" class="col-md-6 control-label">Enterococos t</label>
-															<div class="col-sm-6">
-																<select class="form-control" id="enterococos_t" name="ensayo[enterococos_t]">
-																	<option value='cumple' <%if (ensayos[index].enterococos_t==='cumple') {%> selected <%}%>>✔️ Cumple</option>
-																	<option value='no cumple' <%if (ensayos[index].enterococos_t==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+																	<option value='no ensaya' <%if (ensayos[index].enterococos_m==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
 																</select>
 															</div>
 														</div>
@@ -899,8 +859,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if ((ensayos[index].enterococos_m  !== ensayos[index].enterococos)  ||
-																		(ensayos[index].enterococos_t !== ensayos[index].enterococos)) { %>
+																<% if (ensayos[index].enterococos_m !== ensayos[index].enterococos) { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
@@ -923,16 +882,7 @@
 																<select class="form-control" id="staphlylococcus_m" name="ensayo[staphlylococcus_m]">
 																	<option value='cumple' <%if (ensayos[index].staphlylococcus_m==='cumple') {%> selected <%}%>>✔️ Cumple</option>
 																	<option value='no cumple' <%if (ensayos[index].staphlylococcus_m==='no cumple') {%> selected <%}%>>❌ No cumple</option>
-																</select>
-															</div>
-														</div>
-
-														<div class="form-group">
-															<label for="staphlylococcus" class="col-md-6 control-label">Staphlylococcus t</label>
-															<div class="col-sm-6">
-																<select class="form-control" id="staphlylococcus_t" name="ensayo[staphlylococcus_t]">
-																	<option value='cumple' <%if (ensayos[index].staphlylococcus_t==='cumple') {%> selected <%}%>>✔️ Cumple</option>
-																	<option value='no cumple' <%if (ensayos[index].staphlylococcus_t==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+																	<option value='no ensaya' <%if (ensayos[index].staphlylococcus_m==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
 																</select>
 															</div>
 														</div>
@@ -945,8 +895,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if ((ensayos[index].staphlylococcus_m  !== ensayos[index].staphlylococcus)  ||
-																		(ensayos[index].staphlylococcus_t !== ensayos[index].staphlylococcus)) { %>
+																<% if (ensayos[index].staphlylococcus_m !== ensayos[index].staphlylococcus) { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
