--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -137,6 +137,7 @@
     			<select class="form-control" id="extranios" name="vaso[extranios]">
     				<option value='cumple' <%if (vaso.extranios==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.extranios==='no cumple') {%> selected <%}%>>No cumple</option>
+                    <option value='no ensaya' <%if (vaso.extranios==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -259,6 +260,7 @@
     			<select class="form-control" id="ecoli" name="vaso[ecoli]">
     				<option value='cumple' <%if (vaso.ecoli==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.ecoli==='no cumple') {%> selected <%}%>>No cumple</option>
+                    <option value='no ensaya' <%if (vaso.ecoli==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -271,6 +273,7 @@
     			<select class="form-control" id="pseudomona" name="vaso[pseudomona]">
     				<option value='cumple' <%if (vaso.pseudomona==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.pseudomona==='no cumple') {%> selected <%}%>>No cumple</option>
+                    <option value='no ensaya' <%if (vaso.pseudomona==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -283,6 +286,7 @@
     			<select class="form-control" id="enterococos" name="vaso[enterococos]">
     				<option value='cumple' <%if (vaso.enterococos==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.enterococos==='no cumple') {%> selected <%}%>>No cumple</option>
+                    <option value='no ensaya' <%if (vaso.enterococos==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -295,6 +299,7 @@
     			<select class="form-control" id="staphlylococcus" name="vaso[staphlylococcus]">
     				<option value='cumple' <%if (vaso.staphlylococcus==='cumple') {%> selected <%}%>>Cumple</option>
     				<option value='no cumple' <%if (vaso.staphlylococcus==='no cumple') {%> selected <%}%>>No cumple</option>
+                    <option value='no ensaya' <%if (vaso.staphlylococcus==='no ensaya') {%> selected <%}%>>No ensaya</option>
     			</select>
     		</div>
     	</div>
