Alerta desvío ensayo

--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -356,7 +356,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if (ensayos[index].extranios_m !== ensayos[index].extranios) { %>
+																<% if (ensayos[index].extranios_m  === 'no cumple') { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
@@ -736,7 +736,7 @@
 																</div>
 
 																<div class="col-md-6">
-																	<% if (ensayos[index].ecoli_m !== ensayos[index].ecoli) { %>
+																	<% if (ensayos[index].ecoli_m === 'no cumple') { %>
 																		<img class="center-block" src="/images/info4.png" alt="" />
 																	<%}%>
 																</div>
@@ -814,7 +814,7 @@
 																</div>
 
 																<div class="col-md-6">
-																	<% if (ensayos[index].pseudomona_m !== ensayos[index].pseudomona) { %>
+																	<% if (ensayos[index].pseudomona_m === 'no cumple') { %>
 																		<img class="center-block" src="/images/info4.png" alt="" />
 																	<%}%>
 																</div>
@@ -859,7 +859,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if (ensayos[index].enterococos_m !== ensayos[index].enterococos) { %>
+																<% if (ensayos[index].enterococos_m === 'no cumple') { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
@@ -895,7 +895,7 @@
 															</div>
 
 															<div class="col-md-6">
-																<% if (ensayos[index].staphlylococcus_m !== ensayos[index].staphlylococcus) { %>
+																<% if (ensayos[index].staphlylococcus_m === 'no cumple') { %>
 																	<img class="center-block" src="/images/info4.png" alt="" />
 																<%}%>
 															</div>
